# glass-benchmarks

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: test-constraints.txt
.github/workflows/: benchmark.yml  lint.yaml  lint.yml  regression-test.yaml  regression-test.yml  tags.yaml  test.yaml  test.yml
tests/: conftest.py  test_algorithm.py  test_arraytools.py
